--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -41,7 +41,25 @@
     </style>
 </head>
 <body>
-    <a href="https://PietPestControl.github.io/Schadinsekten_quiz/">Zurück zum Insekten Quiz</a>
+    <a href="https://PietPestControl.github.io/Schadinsekten_quiz/" class="quiz-link">Zurück zum Insekten Quiz</a>
+
+<style>
+  .quiz-link {
+    text-decoration: none;
+    background-color: #4CAF50; /* Grün für den Hintergrund */
+    color: white; /* Weiße Schriftfarbe */
+    padding: 10px 20px; /* Etwas Polsterung für den Button-Effekt */
+    border-radius: 5px; /* Abgerundete Ecken */
+    font-size: 16px; /* Größere Schrift */
+    font-weight: bold; /* Fettere Schrift */
+    transition: background-color 0.3s ease; /* Sanfte Farbänderung bei Hover */
+  }
+
+  .quiz-link:hover {
+    background-color: #45a049; /* Dunkleres Grün bei Hover */
+  }
+</style>
+
     <div id="quiz-container">
         <h1>Wirkstoff Quiz</h1>
         <div id="quiz-content">
