--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -46,17 +46,18 @@
 <style>
   .quiz-link {
     text-decoration: none;
-    background-color: #4CAF50; /* Grün für den Hintergrund */
+    background-color: #7ac728; /* Grün für den Hintergrund */
     color: white; /* Weiße Schriftfarbe */
     padding: 10px 20px; /* Etwas Polsterung für den Button-Effekt */
     border-radius: 5px; /* Abgerundete Ecken */
     font-size: 16px; /* Größere Schrift */
     font-weight: bold; /* Fettere Schrift */
     transition: background-color 0.3s ease; /* Sanfte Farbänderung bei Hover */
+      margin-top: 50px; /* Abstand vom oberen Rand */
   }
 
   .quiz-link:hover {
-    background-color: #45a049; /* Dunkleres Grün bei Hover */
+    background-color: #7ac728; /* Dunkleres Grün bei Hover */
   }
 </style>
 
