--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -44,7 +44,7 @@
     <a href="https://PietPestControl.github.io/Schadinsekten_quiz/" class="quiz-link">Zurück zum Insekten Quiz</a>
 
 <style>
-  .quiz-link {
+.quiz-link {
     text-decoration: none;
     background-color: #7ac728; /* Grün für den Hintergrund */
     color: white; /* Weiße Schriftfarbe */
@@ -53,7 +53,8 @@
     font-size: 16px; /* Größere Schrift */
     font-weight: bold; /* Fettere Schrift */
     transition: background-color 0.3s ease; /* Sanfte Farbänderung bei Hover */
-      margin-top: 50px; /* Abstand vom oberen Rand */
+    display: inline-block; /* Zeilenblock für Abstand */
+    margin-top: 50px; /* Abstand vom oberen Rand */
   }
 
   .quiz-link:hover {
