--- a/quiz3/index.html
+++ b/quiz3/index.html
@@ -61,6 +61,37 @@
     </style>
 </head>
 <body>
+    <div class="button-container">
+  <a href="https://PietPestControl.github.io/Schadinsekten_quiz/" class="quiz-link">Insekten Quiz</a>
+  <a href="https://pietpestcontrol.github.io/Schadinsekten_quiz/quiz2/" class="quiz-link">Wirkstoff Quiz</a>
+  <a href="https://pietpestcontrol.github.io/Schadinsekten_quiz/quiz3/" class="quiz-link">Bekämpfungs Quiz</a>
+</div>
+
+<style>
+  /* Container für die Buttons */
+  .button-container {
+    display: flex; /* Flexbox für horizontale Anordnung */
+    justify-content: center; /* Zentriert die Buttons */
+    gap: 10px; /* Abstand zwischen den Buttons */
+    margin-top: 50px; /* Abstand vom oberen Rand */
+  }
+
+  .quiz-link {
+    text-decoration: none;
+    background-color: #7ac728; /* Grün für den Hintergrund */
+    color: white; /* Weiße Schriftfarbe */
+    padding: 10px 20px; /* Etwas Polsterung für den Button-Effekt */
+    border-radius: 5px; /* Abgerundete Ecken */
+    font-size: 16px; /* Größere Schrift */
+    font-weight: bold; /* Fettere Schrift */
+    transition: background-color 0.3s ease; /* Sanfte Farbänderung bei Hover */
+  }
+
+  /* Hover-Effekt für die Buttons */
+  .quiz-link:hover {
+    background-color: #7ac728; /* Dunkleres Grün bei Hover */
+  }
+</style>
     <div class="container">
         <h1 id="message">Willkommen im Insekten-Lernspiel!</h1>
         <div id="options" class="options"></div>
