--- a/quiz3/index.html
+++ b/quiz3/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             font-size: 16px;
-            background-color: #f5f5f5;
+            background-color: #585858;
             color: #333;
             margin: 0;
             display: flex;
@@ -20,7 +20,7 @@
         }
 
         .container {
-            background: #ffffff;
+            background: #848484;
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -107,7 +107,7 @@
             "lebensraum": "Gärten, Mülltonnen, Gebäude",
             "bekaempfungsmethoden": ["Nest entfernen", "Insektizide"],
             "wirkstoffe": ["Permethrin", "Cypermethrin"],
-            "mittel": "Wespen-Spray",
+            "mittel": "Pytrox P&P Spray",
             "wirkungsweise_funktionsweise": "Störung der neuronalen Signalübertragung",
             "wirkstoffgruppe": "Pyrethroide",
             "wirkungsort": "Zentralnervensystem"
