--- a/quiz3/index.html
+++ b/quiz3/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             font-size: 16px;
-            background-color: #585858;
+            background-color: #BDBDBD;
             color: #333;
             margin: 0;
             display: flex;
