--- a/quiz3/index.html
+++ b/quiz3/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             font-size: 16px;
             background-color: #BDBDBD;
-            color: #333;
+            color: #000000;
             margin: 0;
             display: flex;
             flex-direction: column;
@@ -79,7 +79,7 @@
   .quiz-link {
     text-decoration: none;
     background-color: #7ac728; /* Grün für den Hintergrund */
-    color: white; /* Weiße Schriftfarbe */
+    color: #000000; /* Weiße Schriftfarbe */
     padding: 10px 20px; /* Etwas Polsterung für den Button-Effekt */
     border-radius: 5px; /* Abgerundete Ecken */
     font-size: 16px; /* Größere Schrift */
