--- a/quiz3/index.html
+++ b/quiz3/index.html
@@ -36,7 +36,7 @@
         .button {
             background-color: #7ac728;
             border: none;
-            color: white;
+            color: #000000;
             padding: 10px 20px;
             margin: 10px 0;
             font-size: 16px;
