--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #f9f9f9;
+            background-color: #BDBDBD;
             margin: 0;
             padding: 0;
         }
@@ -16,7 +16,7 @@
             max-width: 800px;
             margin: 50px auto;
             padding: 20px;
-            background: #fff;
+            background: #848484;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
@@ -28,7 +28,7 @@
             margin: 10px 5px;
             padding: 10px 15px;
             background: #7ac728;
-            color: white;
+            color: #000000;
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -59,7 +59,7 @@
   .quiz-link {
     text-decoration: none;
     background-color: #7ac728; /* Grün für den Hintergrund */
-    color: white; /* Weiße Schriftfarbe */
+    color: #000000; /* Weiße Schriftfarbe */
     padding: 10px 20px; /* Etwas Polsterung für den Button-Effekt */
     border-radius: 5px; /* Abgerundete Ecken */
     font-size: 16px; /* Größere Schrift */
