--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 </head>
 <body>
    <div class="button-container">
-  <a href="https://PietPestControl.github.io/Schadinsekten_quiz/" class="quiz-link">Insekten Quiz</a>
-  <a href="https://pietpestcontrol.github.io/Schadinsekten_quiz/quiz2/" class="quiz-link">Wirkstoff Quiz</a>
-  <a href="https://pietpestcontrol.github.io/Schadinsekten_quiz/quiz3/" class="quiz-link">Bekämpfungs Quiz</a>
+  <a href="https://PietPestControl.github.io/Schadinsekten_quiz/" class="quiz-link">Insekten</a>
+  <a href="https://pietpestcontrol.github.io/Schadinsekten_quiz/quiz2/" class="quiz-link">Wirkstoffe</a>
+  <a href="https://pietpestcontrol.github.io/Schadinsekten_quiz/quiz3/" class="quiz-link">Bekämpfung</a>
 </div>
 
 <style>
