--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   }
 </style>
     <div id="quiz-container">
-        <h1>Insekten Quiz</h1>
+        <h1>Insekten</h1>
         <div id="quiz-content">
             <img id="question-image" alt="Insektenbild" style="display: none;">
             <div class="question" id="question-text"></div>
