--- a/quiz3/index.html
+++ b/quiz3/index.html
@@ -94,7 +94,7 @@
   }
 </style>
     <div class="container">
-        <h1 id="message">Willkommen im Insekten-Lernspiel!</h1>
+        <h1 id="message">Bekämpfung</h1>
         <div id="options" class="options"></div>
     </div>
 
