--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -75,7 +75,7 @@
 
 
     <div id="quiz-container">
-        <h1>Wirkstoff Quiz</h1>
+        <h1>Wirkstoffe</h1>
         <div id="quiz-content">
             <div class="question" id="question-text"></div>
             <div id="options-container"></div>
