--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
                
                 { images: ["deutsche_wespe.jpg"], name: "Deutsche Wespe", development: "holometabol" },
                 { images: ["gemeine_wespe.jpg"], name: "Gemeine Wespe", development: "holometabol" },
-                { images: ["Nest_saechsische_wespe.jpg"], name: "Nest Sächsische Wespe", development: "holometabol" },
-                { images: ["feldwespe.jpg"], name: "Feldwespe", development: "holometabol" },
-                { images: ["feldwespe_nest.jpg"], name: "Nest Feldwespe", development: "holometabol" }
+                { images: ["Saechsische_wespe.jpg"], name: "Nest Sächsische Wespe", development: "holometabol" },
+                { images: ["feldwespe.jpg, feldwespe2"], name: "Feldwespe", development: "holometabol" },
             ],
             Käfer: [
                 { images: ["reismehlkaefer.jpg"], name: "Reismehlkäfer", development: "holometabol" },
