--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 { images: ["deutsche_wespe.jpg"], name: "Deutsche Wespe", development: "holometabol" },
                 { images: ["gemeine_wespe.jpg"], name: "Gemeine Wespe", development: "holometabol" },
                 { images: ["Saechsische_wespe.jpg"], name: "Nest Sächsische Wespe", development: "holometabol" },
-                { images: ["feldwespe.jpg", "feldwespe2"], name: "Feldwespe", development: "holometabol" },
+                { images: ["feldwespe.jpg", "feldwespe2.jpg"], name: "Feldwespe", development: "holometabol" },
             ],
             Käfer: [
                 { images: ["reismehlkaefer.jpg"], name: "Reismehlkäfer", development: "holometabol" },
