--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Insekten</title>
     <style>
            .logo {
-            position: absolute;
-            width: 200px; /* Größe des Logos */
-            height: 200px;
-            opacity: 0.5; /* Transparenz */
-            background-image: url('nobaxxlogo.png');
-            background-size: contain;
-            background-repeat: no-repeat;
-            z-index: -1; /* In den Hintergrund schieben */
-        }
+    position: absolute;
+    width: var(--logo-size, 200px); /* Standardgröße, kann angepasst werden */
+    height: var(--logo-size, 200px);
+    opacity: 0.5; /* Transparenz */
+    background-image: url('nobaxxlogo.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: -1; /* In den Hintergrund schieben */
+}
         body {
             font-family: Arial, sans-serif;
             text-align: center;
